--- a/ClubSoft/package.json
+++ b/ClubSoft/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.2"
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "sweetalert2": "^11.12.4"
   }
 }
